@@ -427,10 +427,23 @@ class PokerCashierTestCase(unittest.TestCase):
                               value = self.value)
         p.currency_serial = 1L
         cursor = self.db.cursor()
+        cursor.execute("insert into counter(transaction_id, user_serial, currency_serial, serial, name, value) values('foo', %d, %d, %d, '%040d', %d)" % (self.user_serial, 1L, 1, 1, self.value))
         cursor.close()
         # This doesn't really test anything yet.  I have to set it up so 
         # that the transaction_id is already in the counter table....
-        return self.cashier.cashInValidateNote(1L, p)
+        d = self.cashier.cashInValidateNote(1L, p)
+        def check_validateNoteFailure(reason):
+            from twisted.python import failure
+            from twisted.web import error
+            self.failUnless(isinstance(reason, failure.Failure))
+            self.failUnless(isinstance(reason.value, PacketError))
+            self.assertEqual(reason.value.type, PACKET_ERROR)
+            self.assertEqual(reason.value.other_type, PACKET_POKER_CASH_IN)
+            self.assertEqual(reason.value.message.find("INSERT INTO safe SELECT currency_serial, serial, name, value FROM counter") >= 0, True)
+            return True
+        d.addErrback(check_validateNoteFailure)
+        return d
+#pokernetwork.packets.PacketError: type = ERROR(3) message = INSERT INTO safe SELECT currency_serial, serial, name, value FROM counter        WHERE transaction_id = 'foo' AND              status = 'n'  affected 0 records instead >= 1, code = 3, other_type = POKER_CASH_IN
 
 # --------------------------------------------------------
 def GetTestSuite():
